compiler/testData/diagnostics/testsWithStdLib/hugeUnresolvedKotlinxHtml.fir.kt
class A {
    fun bar() {
        <!UNRESOLVED_REFERENCE!>div<!> {
            <!UNRESOLVED_REFERENCE!>div<!> {
                <!UNRESOLVED_REFERENCE!>div<!> {
                    <!UNRESOLVED_REFERENCE!>div<!> {
                        <!UNRESOLVED_REFERENCE!>div<!> {
                            <!UNRESOLVED_REFERENCE!>div<!> {
                                <!UNRESOLVED_REFERENCE!>div<!> {
                                    <!UNRESOLVED_REFERENCE!>div<!> {
                                        <!UNRESOLVED_REFERENCE!>div<!> {
                                            <!UNRESOLVED_REFERENCE!>div<!> {
                                                <!UNRESOLVED_REFERENCE!>div<!> {
                                                    <!UNRESOLVED_REFERENCE!>div<!> {
                                                        <!UNRESOLVED_REFERENCE!>div<!> {
                                                            <!UNRESOLVED_REFERENCE!>div<!> {
                                                                <!UNRESOLVED_REFERENCE!>div<!> {
                                                                    <!UNRESOLVED_REFERENCE!>div<!> {
                                                                        <!UNRESOLVED_REFERENCE!>div<!> {
                                                                            <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                    <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                        <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                            <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                                <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!ARGUMENT_TYPE_MISMATCH, UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!ARGUMENT_TYPE_MISMATCH, UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!ARGUMENT_TYPE_MISMATCH, UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!ARGUMENT_TYPE_MISMATCH, UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!ARGUMENT_TYPE_MISMATCH, UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!ARGUMENT_TYPE_MISMATCH, UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!ARGUMENT_TYPE_MISMATCH, UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!ARGUMENT_TYPE_MISMATCH, UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!ARGUMENT_TYPE_MISMATCH, UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                }
                                                                                            }
                                                                                        }
                                                                                    }
                                                                                }
                                                                            }
                                                                        }
                                                                    }
                                                                }
                                                            }
                                                        }

                                                    }
                                                }
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}
